# xiaohongSE

./: P4ui部分.rar  README.md  service服务部分.rar  声明_星闪协议等.rar  完整P4.rar  完整WS63.rar  模组.rar  鸿蒙APP源码.rar
P4ui部分/ui/: p4_dialog_page.c
entry/src/main/ets/pages/: Index.ets
service服务部分/services/: audio_service.c  config_service.c  font_service.c  led_service.c  ohos_opus_codec.c  ohos_opus_codec.h  uart_link_service.c.bak_before_rollback_20260613_  uart_link_service.c.bak_opus_guard_20260610_1415  voice_command_service.c
service服务部分/services/include/: device_identity_service.h  font_service.h  ohos_service_msg.h  ohos_uart_link_config.h.pre_uart_clk_diag_20260606_1606  p4_ui_model.h
xiaohong_p4/: CMakeLists.txt  partitions.csv  sdkconfig
xiaohong_p4/components/bsp_extra/: idf_component.yml
xiaohong_p4/components/esp_lcd_st7102/: CMakeLists.txt  esp_lcd_st7102.c  esp_lcd_st7102_general.c  esp_lcd_st7102_rgb.c
xiaohong_p4/components/esp_lcd_st7102/include/: esp_lcd_st7102.h
xiaohong_p4/components/espressif__es8311/: CMakeLists.txt
xiaohong_p4/components/espressif__esp_cam_sensor/: CHECKSUMS.json
xiaohong_p4/components/espressif__esp_cam_sensor/sensors/sc2336/: sc2336.c
xiaohong_p4/components/espressif__esp_ipa/: CMakeLists.txt
xiaohong_p4/components/espressif__esp_lcd_touch_st7123/: CHECKSUMS.json  idf_component.yml
xiaohong_p4/components/espressif__esp_video/: CHECKSUMS.json
xiaohong_p4/components/hw_init/: CMakeLists.txt  hw_init.h  idf_component.yml
xiaohong_p4/components/hw_init/input/: touch_init.c  touch_rotation_helper.c
xiaohong_p4/components/hw_init/lcd/: lcd_init_mipi_dsi.c
xiaohong_p4/components/openharmony_liteos/: CMakeLists.txt  ESP32P4_PORT_STATUS.md  ohos_liteos_bridge.c  ohos_liteos_hal_esp32p4.c  ohos_stdio_wrap.c
xiaohong_p4/components/openharmony_liteos/hw/: ohos_opus_codec.c  osptek_app_video.h  st7102_ek79007_init_cmds.h
xiaohong_p4/components/openharmony_liteos/hw/audio/: ohos_audio_es7210_port.c  ohos_audio_es7210_port.c.bak_p4_audio_route_20260610_1318  ohos_audio_es7210_port.c.before_v2  ohos_audio_es8311_port.c.bak_opus_guard_20260610_1415  ohos_audio_es8311_port.h
xiaohong_p4/components/openharmony_liteos/hw/board/: ohos_board_i2c.c
xiaohong_p4/components/openharmony_liteos/hw/font/: lv_font_stream_bin.c  lv_font_stream_bin.h  lvgl_lfs_font.c  lvgl_lfs_font.h  p4_system_font.c  p4_system_font.h  p4_system_font_cn_16.c  p4_system_font_cn_22.c
xiaohong_p4/components/openharmony_liteos/hw/storage/: ohos_lfs_port.c  ohos_lfs_port.h
xiaohong_p4/components/openharmony_liteos/hw/touch/: ohos_touch_st7123_probe.c
xiaohong_p4/components/openharmony_liteos/lib/: libopenharmony_liteos_m.a.sha256
xiaohong_p4/components/openharmony_liteos/services/: p4_ui_model.c  uart_link_service.c  uart_link_service.c.bak_downprep_20260612  voice_command_service.c.before_v2
xiaohong_p4/components/openharmony_liteos/services/common/: p4_sensor_xh_tlv.c
xiaohong_p4/components/openharmony_liteos/services/include/: file_service.h  ohos_uart_link_config.h  ohos_uart_protocol.h  p4_sensor_xh_tlv.h  voice_command_service.h
xiaohong_p4/components/openharmony_liteos/tools/: quiet_liteos_prebuilt_archive.py
xiaohong_p4/components/openharmony_liteos/ui/: p4_sensor_page.c  p4_status_bar.h
xiaohong_p4/main/: app_main.c  ohos_mainline_multimedia_display.c  st7102_init_table.h
xiaohong_p4/main/assets/: spin_frames.c
xiaohong_p4/tools/: repack_openharmony_liteos_m.sh
zhinengjiaju/: build-profile.json5
zhinengjiaju/entry/src/main/: module.json5
zhinengjiaju/entry/src/main/ets/common/: Theme.ets
声明_星闪协议等/client/: sht30.c
声明_星闪协议等/proto/: xh_sle_proto.h
声明_星闪协议等/sle/: xh_sle_server_adv.c  xh_sle_shim_weak.c
完整WS63/WS63/02_sle_multi_module_home/: BUILD.gn  BUILD.gn.bak  README.md
完整WS63/WS63/02_sle_multi_module_home/board/: xh_fan_module_app.c  xh_module_ids.h  xh_sle_hub.h  xh_uart_p4.h
完整WS63/WS63/02_sle_multi_module_home/drivers/: bh1750.c  fan_gpio.c  fan_key.h  ld2401_gpio.h  light_key.c  ws2812.h
完整WS63/WS63/02_sle_multi_module_home/proto/: xh_sle_proto.c
完整WS63/WS63/02_sle_multi_module_home/sle/: xh_sle_client.h  xh_sle_server.h
最终完整版源码/P4/components/esp_lcd_st7102/: esp_lcd_st7102_mipi.c
最终完整版源码/P4/components/esp_lcd_st7102/priv_include/: st7102_interface.h
最终完整版源码/P4/components/espressif__es8311/: es8311.c
最终完整版源码/P4/components/espressif__es8311/include/: es8311.h
最终完整版源码/P4/components/espressif__esp_cam_sensor/: idf_component.yml
最终完整版源码/P4/components/espressif__esp_lcd_touch_st7123/: .component_hash
最终完整版源码/P4/components/espressif__esp_video/: CMakeLists.txt  idf_component.yml
最终完整版源码/P4/components/hw_init/: Kconfig.projbuild
最终完整版源码/P4/components/openharmony_liteos/: CMakeLists.txt.bak_pool64_20260609  ohos_liteos_bridge.c.bak_opus_guard_20260610_1415  ohos_liteos_print_redirect.h  ohos_mret_probe.c  ohos_p4_tick_isr.S  ohos_task_switch_check_wrap.c
最终完整版源码/P4/components/openharmony_liteos/hw/: camera_capture_probe.c  ohos_mainline_multimedia_display.c  osptek_app_video.c
最终完整版源码/P4/components/waveshare__esp32_p4_wifi6_touch_lcd_xc/: esp32_p4_wifi6_touch_lcd_xc.c
最终完整版源码/P4/main/: CMakeLists.txt  camera_capture_probe.c  idf_component.yml
最终完整版源码/P4/tools/: set_ohos_smoke_mode.sh
最终完整版源码/WS63/02_sle_multi_module_home/: MODIFICATION_NOTES.md  烧录说明.txt
最终完整版源码/WS63/02_sle_multi_module_home/board/: xh_ld2401_module_app.c  xh_light_module_app.c  xh_module_app.c  xh_module_app.h  xh_scene_rule.c  xh_sensor_state.h  xh_sht30_module_app.c  xh_sle_hub.c  xh_sle_module_server.c  xh_sle_module_server.h  xh_uart_p4.c
最终完整版源码/WS63/02_sle_multi_module_home/client/: sht30.h
最终完整版源码/WS63/02_sle_multi_module_home/drivers/: bh1750.h  fan_gpio.h  fan_key.c  ld2401_gpio.c  light_key.h  ws2812.c
最终完整版源码/WS63/02_sle_multi_module_home/sle/: xh_sle_client.c  xh_sle_server.c  xh_sle_server_adv.h
最终完整版源码/WS63/02_sle_multi_module_home/tools/: select_target.py
最终完整版源码/鸿蒙APP/AppScope/: app.json5
模组/board/: xh_bh1750_module_app.c  xh_fan_control.c  xh_fan_control.h  xh_scene_rule.h  xh_sensor_state.c
(+50 files in other folders)
